CE 31 - validate.c,movegen.c added

--- a/CJVercetti.cbp
+++ b/CJVercetti.cbp
@@ -62,6 +62,9 @@
 		<Unit filename="movegen.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="validate.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
